fix: allow button label to wrap on long text, add headingAs select control to Card

--- a/src/ui/button/style.scss
+++ b/src/ui/button/style.scss
@@ -177,6 +177,9 @@
 
   &_label {
     position: relative;
+    white-space: normal;
+    word-break: break-word;
+    text-align: center;
   }
 
   &_full_width {
